--- a/test/integration/targets/ec2_instance/tasks/main.yml
+++ b/test/integration/targets/ec2_instance/tasks/main.yml
@@ -89,188 +89,10 @@
         <<: *aws_connection_info
       register: sg
 
-    - name: Make termination-protected instance in the testing subnet created in the test VPC
-      ec2_instance:
-        name: "{{ resource_prefix }}-test-protected-instance-in-vpc"
-        image_id: "{{ ec2_ami_image[aws_region] }}"
-        tags:
-          TestId: "{{ resource_prefix }}"
-        security_groups: "{{ sg.group_id }}"
-        vpc_subnet_id: "{{ testing_subnet_b.subnet.id }}"
-        termination_protection: true
-        instance_type: t2.micro
-        <<: *aws_connection_info
-      register: in_test_vpc
-    - name: Try to terminate the instance
-      ec2_instance:
-        state: absent
-        name: "{{ resource_prefix }}-test-protected-instance-in-vpc"
-        image_id: "{{ ec2_ami_image[aws_region] }}"
-        tags:
-          TestId: "{{ resource_prefix }}"
-        security_groups: "{{ sg.group_id }}"
-        vpc_subnet_id: "{{ testing_subnet_b.subnet.id }}"
-        termination_protection: true
-        instance_type: t2.micro
-        <<: *aws_connection_info
-      register: bad_terminate
-      ignore_errors: yes
-    - name: Cannot terminate protected instance
-      assert:
-        that:
-          - bad_terminate is failed
-    - name: Try to terminate the instance
-      ec2_instance:
-        name: "{{ resource_prefix }}-test-protected-instance-in-vpc"
-        image_id: "{{ ec2_ami_image[aws_region] }}"
-        vpc_subnet_id: "{{ testing_subnet_b.subnet.id }}"
-        termination_protection: false
-        instance_type: t2.micro
-        <<: *aws_connection_info
-    - name: Try to terminate the instance
-      ec2_instance:
-        name: "{{ resource_prefix }}-test-protected-instance-in-vpc"
-        image_id: "{{ ec2_ami_image[aws_region] }}"
-        vpc_subnet_id: "{{ testing_subnet_b.subnet.id }}"
-        instance_type: t2.micro
-        state: absent
-        <<: *aws_connection_info
-
-    - name: Make instance in the testing subnet created in the test VPC
-      ec2_instance:
-        name: "{{ resource_prefix }}-test-basic-vpc-create"
-        image_id: "{{ ec2_ami_image[aws_region] }}"
-        user_data: |
-          #cloud-config
-          package_upgrade: true
-          package_update: true
-        tags:
-          TestId: "{{ resource_prefix }}"
-          Something: else
-        security_groups: "{{ sg.group_id }}"
-        vpc_subnet_id: "{{ testing_subnet_b.subnet.id }}"
-        instance_type: t2.micro
-        <<: *aws_connection_info
-      register: in_test_vpc
-
-    - name: Try to re-make the instance, hopefully this shows changed=False
-      ec2_instance:
-        name: "{{ resource_prefix }}-test-basic-vpc-create"
-        image_id: "{{ ec2_ami_image[aws_region] }}"
-        user_data: |
-          #cloud-config
-          package_upgrade: true
-          package_update: true
-        tags:
-          TestId: "{{ resource_prefix }}"
-          Something: else
-        security_groups: "{{ sg.group_id }}"
-        vpc_subnet_id: "{{ testing_subnet_b.subnet.id }}"
-        instance_type: t2.micro
-        <<: *aws_connection_info
-      register: remake_in_test_vpc
-    - name: "Remaking the same instance resulted in no changes"
-      assert:
-        that: not remake_in_test_vpc.changed
-    - name: check that instance IDs match anyway
-      assert:
-        that: 'remake_in_test_vpc.instance_ids[0] == in_test_vpc.instance_ids[0]'
-
-    - name: Alter it by adding tags
-      ec2_instance:
-        name: "{{ resource_prefix }}-test-basic-vpc-create"
-        image_id: "{{ ec2_ami_image[aws_region] }}"
-        tags:
-          TestId: "{{ resource_prefix }}"
-          Another: thing
-        security_groups: "{{ sg.group_id }}"
-        vpc_subnet_id: "{{ testing_subnet_b.subnet.id }}"
-        instance_type: t2.micro
-        <<: *aws_connection_info
-      register: add_another_tag
-
-    - ec2_instance_facts:
-        instance_ids: "{{ add_another_tag.instance_ids }}"
-        <<: *aws_connection_info
-      register: check_tags
-    - name: "Remaking the same instance resulted in no changes"
-      assert:
-        that:
-          - check_tags.instances[0].tags.Another == 'thing'
-          - check_tags.instances[0].tags.Something == 'else'
-
-    - name: Purge a tag
-      ec2_instance:
-        name: "{{ resource_prefix }}-test-basic-vpc-create"
-        image_id: "{{ ec2_ami_image[aws_region] }}"
-        purge_tags: true
-        tags:
-          TestId: "{{ resource_prefix }}"
-          Another: thing
-        security_groups: "{{ sg.group_id }}"
-        vpc_subnet_id: "{{ testing_subnet_b.subnet.id }}"
-        instance_type: t2.micro
-        <<: *aws_connection_info
-    - ec2_instance_facts: instance_ids={{ add_another_tag.instance_ids }}
-      register: check_tags
-    - name: "Remaking the same instance resulted in no changes"
-      assert:
-        that:
-          - "'Something' not in check_tags.instances[0].tags"
-
-    - name: Terminate instance
-      ec2_instance:
-        filters:
-          tag:TestId: "{{ resource_prefix }}"
-        state: absent
-        <<: *aws_connection_info
-      register: result
-    - assert:
-        that: result.changed
-    - name: Terminate instance
-      ec2_instance:
-        instance_ids: "{{ in_test_vpc.instance_ids }}"
-        state: absent
-        <<: *aws_connection_info
-      register: result
-    - assert:
-        that: not result.changed
-
-    - name: check that subnet-default public IP rule was followed
-      assert:
-        that:
-          - in_test_vpc.instances[0].public_dns_name == ""
-          - in_test_vpc.instances[0].private_ip_address.startswith("10.22.33")
-          - in_test_vpc.instances[0].subnet_id == testing_subnet_b.subnet.id
-    - name: check that tags were applied
-      assert:
-        that:
-          - in_test_vpc.instances[0].tags.Name.startswith(resource_prefix)
-          - in_test_vpc.instances[0].state.name == 'running'
-
-    - name: Make instance in a default subnet of the VPC
-      ec2_instance:
-        name: "{{ resource_prefix }}-test-default-vpc"
-        network:
-          assign_public_ip: true
-        image_id: "{{ ec2_ami_image[aws_region] }}"
-        tags:
-          TestId: "{{ resource_prefix }}"
-        user_data: |
-          #cloud-config
-          package_upgrade: true
-          package_update: true
-          packages:
-            - git
-        security_groups: "{{ sg.group_id }}"
-        instance_type: t2.micro
-        <<: *aws_connection_info
-      register: in_default_vpc
-    - name: Terminate instance
-      ec2:
-        instance_ids: "{{ in_default_vpc.instance_ids }}"
-        state: absent
-        <<: *aws_connection_info
+    - include_tasks: tasks/termination_protection.yml
+    - include_tasks: tasks/tags_and_vpc_settings.yml
+    - include_tasks: tasks/external_resource_attach.yml
+    - include_tasks: tasks/default_vpc_tests.yml
 
 
     # ============================================================
@@ -286,6 +108,24 @@
       until: removed is not failed
       ignore_errors: yes
       retries: 10
+
+    - name: remove ENIs
+      ec2_eni_facts:
+        filters:
+          vpc-id: "{{ testing_vpc.vpc.id }}"
+        <<: *aws_connection_info
+      register: enis
+
+    - name: delete all ENIs
+      ec2_eni:
+        eni_id: "{{ item.id }}"
+        state: absent
+        <<: *aws_connection_info
+      until: removed is not failed
+      with_items: "{{ enis.network_interfaces }}"
+      ignore_errors: yes
+      retries: 10
+
     - name: remove the security group
       ec2_group:
         name: "{{ resource_prefix }}-sg"
