--- a/test/integration/targets/ios_static_route/tests/cli/basic.yaml
+++ b/test/integration/targets/ios_static_route/tests/cli/basic.yaml
@@ -1,15 +1,18 @@
 ---
 - debug: msg="START ios cli/ios_static_route.yaml on connection={{ ansible_connection }}"
 
-- name: delete static route - setup
-  net_static_route:
-    prefix: 172.16.31.0
+- name: Clear all static routes
+  ios_static_route:
+    prefix: "{{ item }}"
     mask: 255.255.255.0
     next_hop: 10.0.0.8
-    admin_distance: 1
     state: absent
     provider: "{{ cli }}"
-  register: result
+  with_items:
+    - 172.16.31.0
+    - 172.16.32.0
+    - 172.16.33.0
+    - 172.16.34.0
 
 - name: create static route
   ios_static_route:
@@ -23,13 +26,14 @@
 - assert:
     that:
       - 'result.changed == true'
-      - 'result.commands == ["ip route 172.16.31.0 255.255.255.0 10.0.0.8 1"]'
+      - 'result.commands == ["ip route 172.16.31.0 255.255.255.0 10.0.0.8"]'
 
-- name: create static route again (idempotent)
+- name: Verify idempotence with default admin_distance
   ios_static_route:
     prefix: 172.16.31.0
     mask: 255.255.255.0
     next_hop: 10.0.0.8
+    admin_distance: 1
     state: present
     provider: "{{ cli }}"
   register: result
@@ -39,7 +43,7 @@
       - 'result.changed == false'
 
 - name: modify admin distance of static route
-  ios_static_route:
+  ios_static_route: &admin2
     prefix: 172.16.31.0
     mask: 255.255.255.0
     next_hop: 10.0.0.8
@@ -68,11 +72,10 @@
       - 'result.changed == false'
 
 - name: delete static route
-  ios_static_route:
+  net_static_route: &delete
     prefix: 172.16.31.0
     mask: 255.255.255.0
     next_hop: 10.0.0.8
-    admin_distance: 2
     state: absent
     provider: "{{ cli }}"
   register: result
@@ -83,13 +86,7 @@
       - 'result.commands == ["no ip route 172.16.31.0 255.255.255.0 10.0.0.8"]'
 
 - name: delete static route again (idempotent)
-  ios_static_route:
-    prefix: 172.16.31.0
-    mask: 255.255.255.0
-    next_hop: 10.0.0.8
-    admin_distance: 2
-    state: absent
-    provider: "{{ cli }}"
+  ios_static_route: *delete
   register: result
 
 - assert:
@@ -108,7 +105,7 @@
 - assert:
     that:
       - 'result.changed == true'
-      - 'result.commands == ["ip route 172.16.32.0 255.255.255.0 10.0.0.8 1", "ip route 172.16.33.0 255.255.255.0 10.0.0.8 1"]'
+      - 'result.commands == ["ip route 172.16.32.0 255.255.255.0 10.0.0.8", "ip route 172.16.33.0 255.255.255.0 10.0.0.8"]'
 
 - name: Add and remove static route aggregates with overrides
   ios_static_route:
@@ -123,7 +120,7 @@
 - assert:
     that:
       - 'result.changed == true'
-      - 'result.commands == ["no ip route 172.16.33.0 255.255.255.0 10.0.0.8", "ip route 172.16.34.0 255.255.255.0 10.0.0.8 1"]'
+      - 'result.commands == ["no ip route 172.16.33.0 255.255.255.0 10.0.0.8", "ip route 172.16.34.0 255.255.255.0 10.0.0.8"]'
 
 - name: Remove static route aggregates
   ios_static_route:
