--- a/test/integration/targets/iterators/tasks/main.yml
+++ b/test/integration/targets/iterators/tasks/main.yml
@@ -176,7 +176,7 @@
 - name: verify with_subelements in subkeys results
   assert:
     that:
-        - _subelements_missing_subkeys.skipped is not defined
+        - _subelements_missing_subkeys.skipped == False
         - _subelements_missing_subkeys.results|length == 2
         - "_xk == 'k'"
         - "_xl == 'l'"
