Adressing reviewers comments: * vm specification updated only if changes have to be applied. I.e. subsequent updates with the same data will not trigger changed state * Auxilary variables renamed, hope this makes the code more readable * Integration tests changed - re-adding the same properties test not implemented, but tested on real vcenter deployment
Changes tested on vCenter 6.5 deployment

--- a/test/integration/targets/vmware_guest/tasks/vapp_d1_c1_f0.yml
+++ b/test/integration/targets/vmware_guest/tasks/vapp_d1_c1_f0.yml
@@ -50,12 +50,6 @@
 
 - debug: var=vapp_vm
 
-- name: assert the vApp prepeties were created
-  assert:
-    that:
-      - "vapp_vm.failed == false"
-      - "vapp_vm.changed == true"
-
 - name:  Define vApp properties for the new VM
   vmware_guest:
     validate_certs: False
@@ -81,7 +75,7 @@
 
 - debug: var=vapp_vm
 
-- name: assert the VM was changed
+- name: assert the vApp propeties were created
   assert:
     that:
       - "vapp_vm.failed == false"
