--- a/test/integration/targets/eos_vrf/tests/cli/basic.yaml
+++ b/test/integration/targets/eos_vrf/tests/cli/basic.yaml
@@ -161,6 +161,29 @@
       - "'vrf forwarding test1' in result.commands"
       - "'ansible_1' in result.session_name"
 
+- name: Add multiple interfaces to vrf (idempotent)
+  eos_vrf:
+    name: test1
+    rd: 1:202
+    state: present
+    authorize: yes
+    interfaces:
+      - loopback10
+      - loopback11
+      - loopback12
+      - loopback13
+      - loopback14
+      - loopback15
+      - loopback1000
+    provider: "{{ cli }}"
+  become: yes
+  register: result
+
+- assert:
+    that:
+      - "result.changed == false"
+      - "result.commands | length == 0"
+
 - name: Create aggregate of VRFs
   eos_vrf:
     aggregate:
