--- a/lib/ansible/config/base.yml
+++ b/lib/ansible/config/base.yml
@@ -373,7 +373,7 @@ DEFAULT_ASK_SU_PASS:
   name: Ask for the su password
   default: False
   deprecated:
-    why: In favor of Ansible Become which is a generic framework, see becoem_ask_pass
+    why: In favor of Ansible Become which is a generic framework, see become_ask_pass
     version: "2.8"
     alternatives: become
   description:
@@ -1044,7 +1044,7 @@ DEFAULT_SU_FLAGS:
   name: su flags
   default: ''
   deprecated:
-    why: In favor of Ansible Become which is a generic framework, see becoem_flags
+    why: In favor of Ansible Become which is a generic framework, see become_flags
     version: "2.8"
     alternatives: become
   description: 'Flags to pass to su'
