--- a/test/integration/targets/aws_glacier_vault/tasks/main.yml
+++ b/test/integration/targets/aws_glacier_vault/tasks/main.yml
@@ -1,7 +1,5 @@
 ---
-#
-#  Author: Michael De La Rue
-#  based on ec2_key.yml + lambda.py
+#  Author: Loïc BLOT
 
 - block:
 
@@ -20,12 +18,12 @@
     # ============================================================
     - name: test state=present without tags (expect changed=True)
       aws_glacier_vault:
-        name='{{glacier_vault_name}}'
-        ec2_region='{{ec2_region}}'
-        ec2_access_key='{{ec2_access_key}}'
-        ec2_secret_key='{{ec2_secret_key}}'
-        security_token='{{security_token}}'
-        state=present
+        name: '{{ glacier_vault_name }}'
+        ec2_region: '{{ ec2_region }}'
+        ec2_access_key: '{{ ec2_access_key }}'
+        ec2_secret_key: '{{ ec2_secret_key }}'
+        security_token: '{{ security_token }}'
+        state: present
       register: result
 
     - name: assert state=present
@@ -37,13 +35,13 @@
     # ============================================================
     - name: test state=present with tags (expect changed=True)
       aws_glacier_vault:
-        name='{{glacier_vault_name}}'
-        tags='{{glacier_vault_tags}}'
-        ec2_region='{{ec2_region}}'
-        ec2_access_key='{{ec2_access_key}}'
-        ec2_secret_key='{{ec2_secret_key}}'
-        security_token='{{security_token}}'
-        state=present
+        name: '{{ glacier_vault_name }}'
+        tags: '{{ glacier_vault_tags }}'
+        ec2_region: '{{ ec2_region }}'
+        ec2_access_key: '{{ ec2_access_key }}'
+        ec2_secret_key: '{{ ec2_secret_key }}'
+        security_token: '{{ security_token }}'
+        state: present
       register: result
 
     - name: assert state=present add tags
@@ -55,13 +53,13 @@
     # ============================================================
     - name: test state=present drop tags (expect changed=True)
       aws_glacier_vault:
-        name='{{glacier_vault_name}}'
-        tags={}
-        ec2_region='{{ec2_region}}'
-        ec2_access_key='{{ec2_access_key}}'
-        ec2_secret_key='{{ec2_secret_key}}'
-        security_token='{{security_token}}'
-        state=present
+        name: '{{ glacier_vault_name }}'
+        tags: {}
+        ec2_region: '{{ ec2_region }}'
+        ec2_access_key: '{{ ec2_access_key }}'
+        ec2_secret_key: '{{ ec2_secret_key }}'
+        security_token: '{{ security_token }}'
+        state: present
       register: result
 
     - name: assert state=present remove tags
@@ -73,12 +71,12 @@
     # ============================================================
     - name: test state=absent (expect changed=False)
       aws_glacier_vault:
-        name="{{glacier_vault_name}}"
-        ec2_region='{{ec2_region}}'
-        ec2_access_key='{{ec2_access_key}}'
-        ec2_secret_key='{{ec2_secret_key}}'
-        security_token='{{security_token}}'
-        state=absent
+        name: "{{ glacier_vault_name }}"
+        ec2_region: '{{ ec2_region }}'
+        ec2_access_key: '{{ ec2_access_key }}'
+        ec2_secret_key: '{{ ec2_secret_key }}'
+        security_token: '{{ security_token }}'
+        state: absent
       register: result
 
     - name: assert state=absent
@@ -91,16 +89,10 @@
     # ============================================================
     - name: test state=absent (expect changed=False)
       aws_glacier_vault:
-        name="{{glacier_vault_name}}"
-        ec2_region='{{ec2_region}}'
-        ec2_access_key='{{ec2_access_key}}'
-        ec2_secret_key='{{ec2_secret_key}}'
-        security_token='{{security_token}}'
-        state=absent
-      register: result
-
-    - name: assert state=absent
-      assert:
-        that:
-           - 'result is not failed'
-           - 'result.changed == False'
+        name: "{{ glacier_vault_name }}"
+        ec2_region: '{{ ec2_region }}'
+        ec2_access_key: '{{ ec2_access_key }}'
+        ec2_secret_key: '{{ ec2_secret_key }}'
+        security_token: '{{ security_token }}'
+        state: absent
+      ignore_errors: yes
