aws_ec2 inventory plugin: support group by tag value

--- a/contrib/inventory/ec2.ini
+++ b/contrib/inventory/ec2.ini
@@ -140,6 +140,7 @@ group_by_key_pair = True
 group_by_vpc_id = True
 group_by_security_group = True
 group_by_tag_keys = True
+group_by_tag_values = True
 group_by_tag_none = True
 group_by_route53_names = True
 group_by_rds_engine = True
