--- a/test/integration/targets/azure_rm_networkinterface/tasks/main.yml
+++ b/test/integration/targets/azure_rm_networkinterface/tasks/main.yml
@@ -31,7 +31,7 @@
 - name: Create NIC using virtual_network_resource_group parameter
   azure_rm_networkinterface:
       resource_group: "{{ resource_group }}"
-      name: testnic001
+      name: testnic001rg
       virtual_network: testnic001
       virtual_network_resource_group: "{{ resource_group_secondary }}"
       subnet: testnic001
@@ -43,7 +43,7 @@
 - name: Delete NIC
   azure_rm_networkinterface:
       resource_group: "{{ resource_group }}"
-      name: testnic001
+      name: testnic001rg
       state: absent
   
 - name: Create NIC
